--- a/medias/styles.css
+++ b/medias/styles.css
@@ -2,6 +2,9 @@
     box-sizing: border-box;
     margin: 0;
     border: 0;
+}
+
+body {
     font-family: Helvetica;
     font-size: 22px;
     color: seashell;
